@@ -42,20 +42,34 @@ gcc version 4.2.1 20070831 patched [FreeBSD]
     </td>
   </tr>
   <tr>
-   <td>FreeBSD<br>
+   <td>NetBSD<br>
     NetBSD netbsd.Home 6.1.2 NetBSD 6.1.2 (GENERIC) i386
    </td>
    <td>
-COLLECT_GCC=gcc
-Target: i486--netbsdelf
-Thread model: posix
+COLLECT_GCC=gcc<br>
+Target: i486--netbsdelf<br>
+Thread model: posix<br>
 gcc version 4.5.3 (NetBSD nb2 20110806)
 <br>
     </td>
    <td>mysql v5.5.33</td>
-   <td>make strict, does have a warning, to be fixed in future release
-    </td>
+   <td>   </td>
   </tr>
+
+  <tr>
+   <td>DragonFly BSD<br>
+    DragonFly dragon 3.4-RELEASE DragonFly v3.4.3-RELEASE #0: Wed Aug 28 01:55:49 UTC 2013     root@:/usr/obj/usr/src/sys/GENERIC  i386
+   </td>
+   <td>
+Target: i386-pc-dragonflybsd<br>
+Configured with: DragonFly/i386 system compiler (c, c++, objc, LTO)<br>
+Thread model: posix<br>
+gcc version 4.7.2 [DragonFly] Release/2012-09-20<br>
+    </td>
+   <td>mysql v5.1.67</td>
+   <td>A couple of make strict items to be cleaned up later</td>
+  </tr>
+
 
 
 </table>
