@@ -8,4 +8,4 @@ VERSION_MAJOR="1"
 VERSION_MINOR="5"
 VERSION_PATCH="0"
 VERSION_EXTRA="git-beta"
-VERSION_BUILD="747"
+VERSION_BUILD="748"
